--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+# github
+github.client_id=e2c7f9413e9e6cfb2689
+github.client_secret=7c2c2acf3fe910ac5cf0bd8057e671d4409f5e39
+github.redirect.uri=http://localhost:8887/callback
