--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.port=8887
 github.client_id=e2c7f9413e9e6cfb2689
 github.client_secret=7c2c2acf3fe910ac5cf0bd8057e671d4409f5e39
 github.redirect.uri=http://localhost:8887/callback
-
 # mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&&useSSL=false&&characterEncoding=UTF-8&&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=1234
+# mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
