add devtools support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# ÈÈ²¿Êð
+spring.devtools.restart.exclude=templates/**
