--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.username=root
 spring.datasource.password=1234
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.type-aliases-package=com.redsea.community.model
+mybatis.type-aliases-package=com.redsea.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 # ÈÈ²¿Êð
 spring.devtools.restart.exclude=templates/**
